# naver-news-cleaner-pro

./: .gitignore  PRIVACY_POLICY.md  README.md  generate-icons.js  implementation_plan.md  manifest.json  package-lock.json  package.json  resize_images.py  vercel.json
.agent/workflows/: extension-debug-workflow.md
.github/workflows/: main.yml
api/: analyze.js
background/: service-worker.js
content/: content.js
popup/: popup.css  popup.html  popup.js
rust-core/: Cargo.toml
rust-core/src/: lib.rs
tests/: core.test.js  mock-logic.js
wasm/: wasm_loader.js
